Actually fixes link spacing

--- a/static/index.css
+++ b/static/index.css
@@ -135,18 +135,12 @@ body {
 
 a {
 	text-decoration: none;
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 2px;
-	padding-bottom: 2px;
+	padding: 2px;
+	margin-left: 3px;
+	margin-right: 3px;
 	
 	background-color: #FFF;
 	color: #6090CF;
-}
-img {
-	max-width: 262px;
-	height: auto;
-	width: auto;
 }
 a:hover {
 	color: #FFF;
@@ -155,7 +149,10 @@ a:hover {
 h1 a {
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
-
+h1 a:hover {
+	color: #6090CF;
+	background-color: #FFF;
+}
 .close a {
 	color: #CF9060;
 	background-color: #FFF;
@@ -163,4 +160,9 @@ h1 a {
 .close a:hover {
 	background-color: #CF9060;
 	color: #FFF;
+}
+img {
+	max-width: 262px;
+	height: auto;
+	width: auto;
 }
